Fix html viewport tag and plot overflow hidden not scroll

--- a/src/index.css
+++ b/src/index.css
@@ -227,7 +227,7 @@ input[type='search']:focus {
 .movie-card-div {
   max-height: 50vh;
   max-width: 1500px;
-  width: 80%;
+  width: 70%;
 
   display: flex;
   align-items: center;
@@ -241,8 +241,8 @@ input[type='search']:focus {
 }
 
 .movie-card-div > img {
-  max-width: 150px;
-  min-width: 18vw;
+  max-width: 200px;
+  /* min-width: 10vw; */
   width: 20vw;
   margin: 0 3vw;
 }
@@ -330,7 +330,7 @@ p:nth-child(2) {
   margin-top: 1em;
 
   /* border: 1px solid pink; */
-  overflow: scroll;
+  overflow: hidden;
 }
 
 .card-plot-div > p {
@@ -342,8 +342,12 @@ p:nth-child(2) {
 
 @media (max-width: 600px) {
   .movie-card-div {
-    width: 90%;
+    width: 90vw;
     padding: 2rem 0;
+  }
+
+  .movie-card-div > img {
+    max-width: 50px;
   }
 
   .card-title-div > h2,
